@@ -70,7 +70,8 @@ enum mf_field_id {
     MFF_IPV6_LABEL,             /* be32 */
 
     MFF_IP_PROTO,               /* u8 (used for IPv4 or IPv6) */
-    MFF_IP_TOS,                 /* u8 (used for IPv4 or IPv6) */
+    MFF_IP_DSCP,                /* u8 (used for IPv4 or IPv6) */
+    MFF_IP_ECN,                 /* u8 (used for IPv4 or IPv6) */
     MFF_IP_FRAG,                /* u8 (used for IPv4 or IPv6) */
 
     MFF_ARP_OP,                 /* be16 */
