@@ -26,7 +26,7 @@ DEFINE_FIELD_M(OF_ETH_DST,    MFF_ETH_DST,    true)
 DEFINE_FIELD  (OF_ETH_SRC,    MFF_ETH_SRC,    true)
 DEFINE_FIELD  (OF_ETH_TYPE,   MFF_ETH_TYPE,  false)
 DEFINE_FIELD_M(OF_VLAN_TCI,   MFF_VLAN_TCI,   true)
-DEFINE_FIELD  (OF_IP_TOS,     MFF_IP_TOS,     true)
+DEFINE_FIELD  (OF_IP_TOS,     MFF_IP_DSCP,    true)
 DEFINE_FIELD  (OF_IP_PROTO,   MFF_IP_PROTO,  false)
 DEFINE_FIELD_M(OF_IP_SRC,     MFF_IPV4_SRC,   true)
 DEFINE_FIELD_M(OF_IP_DST,     MFF_IPV4_DST,   true)
@@ -45,6 +45,7 @@ DEFINE_FIELD  (NX_ARP_THA,    MFF_ARP_THA,   false)
 DEFINE_FIELD_M(NX_IPV6_SRC,   MFF_IPV6_SRC,  false)
 DEFINE_FIELD_M(NX_IPV6_DST,   MFF_IPV6_DST,  false)
 DEFINE_FIELD  (NX_IPV6_LABEL, MFF_IPV6_LABEL,false)
+DEFINE_FIELD  (NX_IP_ECN,     MFF_IP_ECN,     true)
 /* XXX should we have MFF_ICMPV4_TYPE and MFF_ICMPV6_TYPE? */
 DEFINE_FIELD  (NX_ICMPV6_TYPE,MFF_ICMP_TYPE, false)
 DEFINE_FIELD  (NX_ICMPV6_CODE,MFF_ICMP_CODE, false)
